<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_music_hot"
            android:icon="@drawable/ic_chart_black_48dp"
            android:title="@string/nav_music_hot" />
        <item
            android:id="@+id/nav_artist"
            android:icon="@drawable/ic_album_black_48dp"
            android:title="@string/nav_artist" />

        <item
            android:id="@+id/nav_music_rank"
            android:icon="@drawable/ic_chart_black_48dp"
            android:title="@string/nav_music_rank" />

    </group>

    <item android:title="Công cụ">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_person_outline_black_48dp"
                android:title="@string/nav_login" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_person_outline_black_48dp"
                android:title="Đăng Xuất" />
        </menu>
    </item>


</menu>
